# simple-raster

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
src/: main.cpp
